fixing scrollbar

--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 body{
     font-size: 100%;
     font-family: "Open Sans";
-    scroll-behavior: smooth;
-    
+}
+html{
+    scroll-behavior: smooth;  
 }
 #navbar{
     background-color: #19647E;
